<resources>
    <string name="app_name">Github Reader</string>

    <!--General-->
    <string name="no_internet_message">No internet connection. To fetch data, please, connect to the internet.</string>
    <string name="ok">Ok</string>
    <string name="error_default">Something went wrong</string>
    <string name="error_default_db">Something went wrong with database</string>
    <string name="no_internet_connection_title">No internet connection</string>
    <string name="no_internet_connection_text">Something is wrong with your internet connection</string>
    <string name="no_internet_connection_text_2">Something is wrong with your internet connection. Please check it.</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat.
    </string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.</string>

    <!--GitResults-->
    <string name="search">Search</string>
    <string name="forks">Forks: </string>
    <string name="stars">Stars: </string>

    <!--GitDetails-->
    <string name="subscribers_">Subscribers: </string>
    <string name="subscribers">Subscribers</string>
    <string name="view_text_email">Email: </string>
    <string name="view_text_description">Description: </string>
    <string name="view_text_language">Programming language: </string>
    <string name="view_text_created">Created at: </string>
    <string name="view_text_modified">Updated at: </string>
    <string name="view_text_forks">Number of forks: </string>
    <string name="view_text_issues">Number of issues: </string>
    <string name="view_text_watchers">Number of watchers: </string>
    <string name="view_text_typeUser">Type of user: </string>
    <string name="view_text_siteAdmin">Is Admin: </string>
    <string name="view_text_subscriptions">Number of subscriptions: </string>


</resources>
